[package]
name = "github-app-authenticator"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
http = "0.2.9"
jsonwebtoken = "8.3.0"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tracing = "0.1.37"

[dev-dependencies]
pem-rfc7468 = "0.7.0"
rand = "0.8.5"
rsa = "0.9.2"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.5.18"
